# Project-3D-Scene

./: .gitattributes.swp  CMakeLists.txt  Camera.cpp  Camera.hpp  Model3D.cpp  Model3D.hpp  README.md  Window.cpp  Window.h  main.cpp  poc.sfk
__MACOSX/: ._SkyBox.cpp  ._SkyBox.hpp  ._skybox  ._skyboxShader.frag  ._skyboxShader.vert
__MACOSX/skybox/: ._right.tga
shaders/: basic.frag  basic.vert  depthMap.frag  depthMap.vert  shaderStart.frag  shaderStart.vert
